fix: #1515 Fixed long nospaces words in the chat render, added trash Icon from feather instead of react icons for consistency, fixed label line styles on mobile (adjust labels modal)

--- a/mw-webapp/src/logic/chat/messageItem/MessageItem.module.scss
+++ b/mw-webapp/src/logic/chat/messageItem/MessageItem.module.scss
@@ -9,6 +9,7 @@
   padding: $paddingSmall;
   border-radius: $primaryBorderRadius;
   background-color: var(--tertiaryBgColor);
+  overflow-wrap: anywhere;
   white-space: pre-wrap;
 }
 
@@ -20,5 +21,4 @@
   flex: 1;
   background-color: var(--generalPrimaryColor);
   color: var(--secondaryTextColor);
-  word-wrap: break-word;
 }
